--- a/common/src/main/resources/assets/fightorflight/lang/en_us.json
+++ b/common/src/main/resources/assets/fightorflight/lang/en_us.json
@@ -4,7 +4,8 @@
   "item.fightorflight.pokestaff.desc2":"Move slot: %d",
   "item.fightorflight.pokestaff.mode.send":"Send command to your Pokemon",
   "item.fightorflight.pokestaff.mode.selectmoveslot":"Select move slot",
-  "item.fightorflight.pokestaff.send.result":"Selected move: "
+  "item.fightorflight.pokestaff.send.result":"Selected move: ",
+  "item.fightorflight.oran_lucky_egg":"Oran Lucky Egg"
 
 
 }
