Upgrade the Poke Staff

--- a/common/src/main/resources/assets/fightorflight/lang/en_us.json
+++ b/common/src/main/resources/assets/fightorflight/lang/en_us.json
@@ -2,9 +2,16 @@
   "item.fightorflight.pokestaff":"Poke Staff",
   "item.fightorflight.pokestaff.desc1":"Mode: ",
   "item.fightorflight.pokestaff.desc2":"Move slot: %d",
+  "item.fightorflight.pokestaff.desc3":"Command Mode: %s",
   "item.fightorflight.pokestaff.mode.send":"Send command to your Pokemon",
   "item.fightorflight.pokestaff.mode.selectmoveslot":"Select move slot",
-  "item.fightorflight.pokestaff.send.result":"Selected move: ",
+  "item.fightorflight.pokestaff.mode.selectcommand": "Choose the command mode of this staff",
+  "item.fightorflight.pokestaff.command.move_attack": "Move Attack",
+  "item.fightorflight.pokestaff.command.move": "Move",
+  "item.fightorflight.pokestaff.command.stay": "Hold Position",
+  "item.fightorflight.pokestaff.command.no_cmd": "No Command",
+  "item.fightorflight.pokestaff.send.result.move":"Selected move: ",
+  "item.fightorflight.pokestaff.send.result.command":"Selected command: ",
   "item.fightorflight.oran_lucky_egg":"Oran Lucky Egg",
   "key.fightorflight.startbattle": "Start a battle with an angered pokemon",
   "key.fightorflight.categories.fightorflight":"Cobblemon Fight of Flight"
