--- a/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
@@ -9,9 +9,13 @@
   "item.fightorflight.pokestaff.command.move_attack": "移动攻击",
   "item.fightorflight.pokestaff.command.move": "移动",
   "item.fightorflight.pokestaff.command.stay": "原地驻守",
+  "item.fightorflight.pokestaff.command.attack_target": "攻击目标",
+  "item.fightorflight.pokestaff.command.attack_position": "攻击位置",
   "item.fightorflight.pokestaff.command.no_cmd": "无指令",
+  "item.fightorflight.pokestaff.command.clear_cmd": "清除指令",
   "item.fightorflight.pokestaff.send.result.move":"当前选择技能: ",
   "item.fightorflight.pokestaff.send.result.command":"当前指令: ",
+  "item.fightorflight.pokestaff.recv.command": "[ %s ] 当前指令: %s",
   "item.fightorflight.oran_lucky_egg":"橙橙幸运蛋",
   "key.fightorflight.startbattle": "向被激怒的宝可梦发起战斗"
 
