--- a/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
@@ -10,7 +10,7 @@
   "item.fightorflight.pokestaff.command.move": "移动",
   "item.fightorflight.pokestaff.command.stay": "原地驻守",
   "item.fightorflight.pokestaff.command.attack_target": "攻击目标",
-  "item.fightorflight.pokestaff.command.attack_position": "攻击位置",
+  "item.fightorflight.pokestaff.command.attack_position": "攻击位置(未完成)",
   "item.fightorflight.pokestaff.command.no_cmd": "无指令",
   "item.fightorflight.pokestaff.command.clear_cmd": "清除指令",
   "item.fightorflight.pokestaff.send.result.move":"当前选择技能: ",
