Added message for better notification

--- a/common/src/main/resources/assets/fightorflight/lang/en_us.json
+++ b/common/src/main/resources/assets/fightorflight/lang/en_us.json
@@ -13,9 +13,8 @@
   "item.fightorflight.pokestaff.command.attack_position": "Attack Position(W.I.P.)",
   "item.fightorflight.pokestaff.command.no_cmd": "No Command",
   "item.fightorflight.pokestaff.command.clear_cmd": "Clear All Command",
-  "item.fightorflight.pokestaff.send.result.move":"Selected move: ",
-  "item.fightorflight.pokestaff.send.result.command":"Selected command: ",
-  "item.fightorflight.pokestaff.recv.command": "[ %s ] Selected Command: %s",
+  "item.fightorflight.pokestaff.move":"[ %s ] Selected move: %s",
+  "item.fightorflight.pokestaff.command":"[ %s ] Selected Command: %s",
   "item.fightorflight.oran_lucky_egg":"Oran Lucky Egg",
   "key.fightorflight.startbattle": "Start a battle with an angered pokemon",
   "key.fightorflight.moveslot1": "Select Move Slot 1",
