--- a/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
@@ -13,9 +13,8 @@
   "item.fightorflight.pokestaff.command.attack_position": "攻击位置(未完成)",
   "item.fightorflight.pokestaff.command.no_cmd": "无指令",
   "item.fightorflight.pokestaff.command.clear_cmd": "清除指令",
-  "item.fightorflight.pokestaff.send.result.move":"当前选择技能: ",
-  "item.fightorflight.pokestaff.send.result.command":"当前指令: ",
-  "item.fightorflight.pokestaff.recv.command": "[ %s ] 当前指令: %s",
+  "item.fightorflight.pokestaff.move":"[%s]当前选择技能: %s",
+  "item.fightorflight.pokestaff.command":"[%s]当前指令: %s",
   "item.fightorflight.oran_lucky_egg":"橙橙幸运蛋",
   "key.fightorflight.startbattle": "向被激怒的宝可梦发起战斗",
   "key.fightorflight.moveslot1": "选择第1个技能",
