idk why the status effect doesn't work

--- a/common/src/main/resources/assets/fightorflight/lang/en_us.json
+++ b/common/src/main/resources/assets/fightorflight/lang/en_us.json
@@ -29,8 +29,8 @@
   "key.fightorflight.cmdmode.nocmd": "No Command",
   "key.fightorflight.cmdmode.stay": "Hold Position",
   "key.fightorflight.categories.fightorflight":"Cobblemon Fight of Flight",
-  "key.fightorflight.categories.fightorflight.pokestaff": "Cobblemon Fight of Flight: Poke Staff"
-
+  "key.fightorflight.categories.fightorflight.pokestaff": "Cobblemon Fight of Flight: Poke Staff",
+  "effect.fightorflight.resistance_weakened": "Resistance Weakened"
 
 
 }
