--- a/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/fightorflight/lang/zh_cn.json
@@ -28,6 +28,7 @@
   "key.fightorflight.cmdmode.move_attack": "移动攻击",
   "key.fightorflight.cmdmode.nocmd": "无指令",
   "key.fightorflight.cmdmode.stay": "原地驻守",
-  "key.fightorflight.categories.fightorflight.pokestaff": "Cobblemon Fight of Flight: 宝可杖"
+  "key.fightorflight.categories.fightorflight.pokestaff": "Cobblemon Fight of Flight: 宝可杖",
+  "effect.fightorflight.resistance_weakened": "抗性减弱"
 
 }
